[gd_scene load_steps=8 format=3 uid="uid://dwwpbyho4tqlq"]

[ext_resource type="Script" path="res://scenes/entities/ship/ship.gd" id="1_i3f1w"]
[ext_resource type="Texture2D" uid="uid://b7yjp8jelnsm7" path="res://assets/Fighter/Idle.png" id="3_1s5vt"]
[ext_resource type="PackedScene" uid="uid://brimy02fec1lo" path="res://scenes/entities/ship/radar/radar.tscn" id="3_dej3v"]
[ext_resource type="PackedScene" uid="uid://dcd8guk1qivr4" path="res://scenes/utils/colisao/daDanoDeColisao.tscn" id="4_0djxf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_itcvl"]
bounce = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tndx8"]
radius = 7.0
height = 26.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_a1fa0"]
properties/0/path = NodePath(".:replicated_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:replicated_rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:replicated_linear_velocity")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:replicated_angular_velocity")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:linear_velocity")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:angular_velocity")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:rotation")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath(".:player_index")
properties/8/spawn = true
properties/8/replication_mode = 1

[node name="Ship" type="RigidBody2D"]
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_itcvl")
gravity_scale = 0.0
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 4
linear_damp = 0.8
angular_damp = 1.5
script = ExtResource("1_i3f1w")

[node name="ShipBodyColision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_tndx8")

[node name="ShipBody2" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.3, 0.290625)
texture = ExtResource("3_1s5vt")

[node name="ColldownSprite" type="Sprite2D" parent="ShipBody2"]
visible = false
modulate = Color(0.552956, 0.552956, 0.552956, 1)
position = Vector2(0, -4.76837e-07)
texture = ExtResource("3_1s5vt")

[node name="Radar" parent="." instance=ExtResource("3_dej3v")]
position = Vector2(0, -18)

[node name="NextMove" type="Timer" parent="."]
one_shot = true

[node name="ColisionImunity" type="Timer" parent="."]
one_shot = true

[node name="DaDanoDeColisao" parent="." node_paths=PackedStringArray("nodeColisor") instance=ExtResource("4_0djxf")]
nodeColisor = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_a1fa0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Radar" to="." method="_on_radar_body_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_radar_body_exited"]
[connection signal="timeout" from="NextMove" to="." method="_on_next_move_timeout"]
[connection signal="timeout" from="ColisionImunity" to="." method="_on_colision_imunity_timeout"]
